load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")
load("@io_bazel_rules_docker//java:image.bzl", "java_image")


java_grpc_library(
    name = "routeguide",
    protos = ["//example/proto:routeguide_proto"],
)

java_image(
    name = "client",
    srcs = [
        "io/grpc/examples/routeguide/RouteGuideClient.java",
        "io/grpc/examples/routeguide/RouteGuideServer.java",
        "io/grpc/examples/routeguide/RouteGuideUtil.java",
    ],
    main_class = "io.grpc.examples.routeguide.RouteGuideClient",
    resources = ["route_guide_db.json"],
    deps = [
        ":routeguide",
    ],
)

java_image(
    name = "server",
    srcs = [
        "io/grpc/examples/routeguide/RouteGuideServer.java",
        "io/grpc/examples/routeguide/RouteGuideUtil.java",
    ],
    main_class = "io.grpc.examples.routeguide.RouteGuideServer",
    resources = ["route_guide_db.json"],
    deps = [
        ":routeguide",
    ],
)
